--- a/index.html
+++ b/index.html
@@ -4,6 +4,37 @@
   <title></title>
 </head>
 <body>
+  <div>
 
+    <output>99999</output>
+
+    <table>
+      <tr>
+        <td><button id='9'>9</button></td>
+          <td><button id='8'>8</button></td>
+          <td><button id='7'>7</button></td>
+      </tr>
+      <tr>
+        <td><button id='6'>6</button></td>
+        <td><button id='5'>5</button></td>
+        <td><button id='4'>4</button></td>
+      </tr>
+      <tr>
+        <td><button id='3'>3</button></td>
+        <td><button id='2'>2</button></td>
+        <td><button id='1'>1</button></td>
+      </tr>
+      <tr>
+        <td><button id='+'>+</button></td>
+        <td><button id='0'>0</button></td>
+        <td><button id='-'>-</button></td>
+      </tr>
+    </table>
+    <button id='clear'>clear</button>
+  </div>
+
+  <script src='mathFunctions.js'></script>
 </body>
 </html>
+
+
